# Jisho

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
resources/: Jisho.rc  jisho.exe.manifest  jisho.res
src/: main.rs  resources.h  resources.rs
src/window/: mainwind.rs  mod.rs  popupwind.rs
