[package]
name = "jisho"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.3", features = ["blocking"] }
windows-sys = { version = "0.52.0", features = [
    "Win32_UI_Input_KeyboardAndMouse", 
    "Win32_System_DataExchange", 
    "Win32_System_Ole", 
    "Win32_UI_WindowsAndMessaging", 
    "Win32_Graphics_Gdi", 
    "Win32_System_LibraryLoader", 
    "Win32_UI_Controls",
    "Win32_UI_Shell",
    "Win32_Globalization",
    "Win32_System_SystemServices",
    "Win32_UI_HiDpi"
    ] }
json = "0.12.4"
widestring = "1.1.0"
